--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,17 +31,14 @@
 
         <div class="navbar-dropdown">
           <a class="navbar-item">
-            About
+            Settings
           </a>
           <a class="navbar-item">
-            Jobs
-          </a>
-          <a class="navbar-item">
-            Contact
+            Profile
           </a>
           <hr class="navbar-divider">
           <a class="navbar-item">
-            Report an issue
+            Log out
           </a>
         </div>
       </div>
