--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,1 +1,43 @@
-<h1>Welcome to this rails deploy test</h1>
+<section class="section ">
+  <!-- <h1 class="title has-text-centered">Welcome to this rails deploy test</h1>-->
+  <div class="container">
+    <div class="columns custom-boxes-container">
+      <div class="panel column is-8 is-dark" id="messages-panel">
+        <p class="panel-heading">
+            Messages
+        </p>
+        <div class="card">
+          <div class="card-content " id="messages-container">
+sent by Danis:
+            <div class="notification is-primary">
+               hi
+            </div>
+sent by Danis:
+            <div class="notification is-primary">
+               hi
+            </div>
+sent by Danis:
+            <div class="notification is-primary">
+               hi
+            </div>
+sent by Danis:
+            <div class="notification is-primary mb-5">
+               hi
+            </div>
+
+          </div>
+        </div> 
+      </div>
+      <div class="column is-1"></div>
+      <div class="panel column is-3 is-link" >
+        <p class="panel-heading">
+            Messages
+        </p>
+        <div class="card">
+          <div class="card-content" id="friends-panel">
+          </div>
+        </div> 
+      </div>
+    </div>
+  </div>
+</section>
